--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -1,105 +1,33 @@
-/*
-	Overflow 1.1 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	body
-	{
-		background: #203936 url('../images/bg-alt.jpg') top center no-repeat;
-		background-size: 100% auto;
-	}
-
-	body,input,textarea,select
-	{
+	body,input,textarea,select {
 		font-size: 14pt;
 	}
-
-	h1,h2,h3,h4,h5,h6
-	{
-		line-height: 1.5em;
-	}
-
-	header
-	{
-	}
 	
-		header p
-		{
-			margin: 0.25em 0 0 0;
-			padding: 0 0 0.5em 0;
-		}
-
-	/* Box */
-
-		.box
-		{
-			position: relative;
+	/* Main */
+		
+		.main {
 		}
 		
-			.box section
-			{
-				margin: 0 0 2em 0;
+			.main.style2 {
 			}
 			
-			.box.style1
-			{
-				padding: 2.5em 2em 2.5em 2em;
-			}
-
-				.box.style1.right
-				{
+				.main.style2 .content {
+					width: 50%;
 				}
-					
-					.box.style1.right .inner
-					{
-						padding-left: 2em;
-					}
-				
-				.box.style1.left
-				{
-				}
-					
-					.box.style1.left .inner
-					{
-						padding-right: 2em;
-					}
-
-			.box.style2
-			{
-			}
-
-				.box.style2 header
-				{
-					padding: 2em;
-				}
-
-				.box.style2 .inner
-				{
-					position: relative;
-					padding: 30px 0 0 0;
-				}
-
-			.box.style3
-			{
-				padding: 2.5em 2em 2.5em 2em;
-			}
 			
-/*********************************************************************************/
-/* Banner                                                                        */
-/*********************************************************************************/
+					.main.style2.right .content {
+						left: 50%;
+					}
 
-	#banner
-	{
-		padding: 3.5em;
-		background-size: 200% auto;
-	}
+				.main.style2.inactive {
+				}
 
-		#banner br
-		{
-			display: none;
-		}
+					.main.style2.inactive .content {
+					}
+
+						.main.style2.inactive.left .content {
+							left: -50%;
+						}
